WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253597
Fix crash in Document::topmostAutoPopover()
https://bugs.webkit.org/show_bug.cgi?id=253597
Summary
Fix crash in Document::topmostAutoPopover()
Chirag M Shah
Reported
2023-03-08 13:05:27 PST
rdar://106423630
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-03-08 13:18:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11250
EWS
Comment 2
2023-03-08 16:39:35 PST
Committed
261391@main
(db12f6fd8603): <
https://commits.webkit.org/261391@main
> Reviewed commits have been landed. Closing PR #11250 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug