Fix crash in Document::topmostAutoPopover() https://bugs.webkit.org/show_bug.cgi?id=253597 rdar://106423630

Reviewed by Tim Nguyen and Chris Dumez.

This change fixes a crash introduced recently by making sure candidate
is non-null before dereferencing it.

* LayoutTests/fast/html/popover-with-fullscreen-crash-expected.txt: Added.
* LayoutTests/fast/html/popover-with-fullscreen-crash.html: Added.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::topmostAutoPopover const):

Canonical link: https://commits.webkit.org/261391@main